--- a/pedroai/slurm_tui_styles/style.css
+++ b/pedroai/slurm_tui_styles/style.css
@@ -1,6 +1,5 @@
 #queue_table {
-    height: 27%;
-    border: green;
+    height: 25%;
 }
 
 .hidden {
@@ -8,10 +7,49 @@
 }
 
 #logs {
-    min-height: 70%;
+    height: 68%;
+    border: green;
+    overflow-y: scroll;
+}
+
+
+#stdout {
+    height: auto;
+    overflow: hidden;
+}
+
+#stderr {
+    height: auto;
+    overflow: hidden;
+}
+
+
+#stdout_tab {
+    height: auto;
+}
+
+#stderr_tab {
+    height: auto;
+}
+
+.green_border {
     border: green;
 }
 
-.max_height {
-    min-height: 28;
+#node_buttons {
+    height: 3;
+    margin-bottom: 1;
+}
+
+.node_button {
+    margin: 1 2;
+}
+
+.filename_label {
+    border: lightblue;
+}
+
+Screen {
+    scrollbar-color: blue;
+    scrollbar-background: gray;
 }
